--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "documind-pro",
+  "name": "ytwse-document-management-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
